--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,9 @@
         android:icon="@android:drawable/ic_search_category_default"
         yourapp:showAsAction="always|collapseActionView"
         yourapp:actionViewClass="android.support.v7.widget.SearchView" />
+    <item
+        android:id="@+id/action_reload"
+        android:title="@string/reload_menu"
+        android:icon="@android:drawable/ic_menu_upload"
+        yourapp:showAsAction="ifRoom|collapseActionView"/>
 </menu>
