--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -2,13 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1.0"
-    android:background="@android:color/white">
+    android:background="@android:color/darker_gray">
     <ListView
         android:id="@+id/leftmenu_items"
         android:choiceMode="singleChoice"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        ></ListView>
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
